--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,36 @@
-{
-  "version": 2,
-  "public": true,
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self'; connect-src 'self' https://*.supabase.co wss: https://*.railway.app https://cdn.jsdelivr.net; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; img-src 'self' data:; media-src 'self' blob:; frame-ancestors 'none'"
-        },
-        { "key": "X-Frame-Options", "value": "DENY" },
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "Referrer-Policy", "value": "no-referrer" },
-        { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" }
-      ]
-    }
-  ],
-  "functions": {
-    "api/**/*.js": {
-      "memory": 128,
-      "maxDuration": 10
+ {
+    "version": 2,
+    "public": true,
+    "rewrites": [
+      { "source": "/api/(.*)", "destination": "/api/$1" }
+    ],
+    "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          {
+            "key": "Content-Security-Policy",
+            "value": "default-src 'self'; connect-src 'self'
+   https://*.supabase.co wss: https://*.railway.app
+  https://cdn.jsdelivr.net; script-src 'self'
+  https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self'
+   https://cdn.jsdelivr.net 'unsafe-inline'; img-src 'self'
+  data:; media-src 'self' blob:; frame-ancestors 'none'"
+          },
+          { "key": "X-Frame-Options", "value": "DENY" },
+          { "key": "X-Content-Type-Options", "value":
+  "nosniff" },
+          { "key": "Referrer-Policy", "value": "no-referrer"
+   },
+          { "key": "Permissions-Policy", "value":
+  "camera=(), microphone=(), geolocation=()" }
+        ]
+      }
+    ],
+    "functions": {
+      "api/**/*.js": {
+        "memory": 128,
+        "maxDuration": 10
+      }
     }
   }
-}
